--- a/css/style.css
+++ b/css/style.css
@@ -145,3 +145,39 @@ button {
 /* border none-ს რომ ვუწერ აღარ ეკლიკება... ზემოთ ჰედერში ა ტეგით გავაკეთე Button ტეგი არ გამოვიყენე იგივე შედეგია თითქოს. */
 
 /* section2 */
+
+.section2{
+    width: 1440px;
+    margin: 200px auto;
+    padding: 0 130px;
+}
+.section2_title{
+    color: #4D4D4D;
+    font-family: Poppins;
+font-size: 48px;
+font-style: normal;
+font-weight: 500;
+line-height: 130%; /* 62.4px */
+letter-spacing: 0.24px;
+text-align: center;
+}
+.section2_div{
+    display: inline-block;
+    margin-top: 54px;
+    
+    
+}
+.section2div1{
+    margin-right: 16px;
+    }
+.section2_divtxt{
+    color: #535353;
+font-family: Poppins;
+font-size: 24px;
+font-style: normal;
+font-weight: 400;
+line-height: 36px; 
+letter-spacing: 0.12px;
+margin-top: 32px;
+
+}
